Fix inconsistent overflow handling

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -10396,6 +10396,7 @@ noscript {
     flex-direction: column;
     gap: 8px;
     flex: 1 1 auto;
+    overflow: hidden;
 
     &__header {
       display: flex;
